--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "vue-image-zoom": "^1.0.6",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
