--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mescroll.js": "^1.4.1",
     "mint-ui": "^2.2.13",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.6"
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.6.0",
