--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.18",
+    "chance": "^1.0.18",
     "core-js": "^2.6.5",
     "element-ui": "^2.7.2",
+    "file-saver": "^2.0.2",
+    "html2canvas": "^1.0.0-rc.1",
     "mescroll.js": "^1.4.1",
     "mint-ui": "^2.2.13",
     "vue": "^2.6.10",
